syntax = "proto3";

package go.micro.srv.GetSession;

service GetSession {
	rpc CallGetSession(Request) returns (Response) {}

}

message Message {
	string say = 1;
}

message Request {
	string SessionID = 1;
}

message Response {
	string Error= 1;
	string ErrMsg=2;
	string Name=3;
}